UtahLiveDataTest/src/objects/MSPAward__c.object
<CustomObject>
    <fields>
        <fullName>AwardAmount__c</fullName>
        <label>Award Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MSPGrant__c</fullName>
        <label>MSP Grant</label>
        <referenceTo>MSPGrant__c</referenceTo>
        <relationshipLabel>MSP Awards</relationshipLabel>
        <relationshipName>MSP_Awards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>MSP Award</label>
    <nameField>
        <label>MSP Award Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSP Awards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>